--- a/index.html
+++ b/index.html
@@ -1,24 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="scripts.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
-      crossorigin="anonymous"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <script src="scripts.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-3 bg-light text-center rounded">
+        <div class="row">
+          <div class="col p-1">
+            <input type="text" class="form-control text-end" placeholder="0" id="display">
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-danger w-100">C</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-primary w-100">&#8592</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-warning w-100">(</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-warning w-100">)</button>
+          </div>
+        </div>
+        <div class="row mt-1">
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-warning w-100">x&#178</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-warning w-100">&#8730</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-warning w-100">%</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-warning w-100">&#960</button>
+          </div>
+        </div>
+        <div class="row mt-1">
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">7</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">8</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">9</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-info w-100">*</button>
+          </div>
+        </div>
+        <div class="row mt-1">
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">4</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">5</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">6</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-info w-100">/</button>
+          </div>
+        </div>
+        <div class="row mt-1">
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">1</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">2</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">3</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-info w-100">-</button>
+          </div>
+        </div>
+        <div class="row mt-1">
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">0</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-secondary w-100">.</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-success w-100">=</button>
+          </div>
+          <div class="col-3 p-1">
+            <button type="button" class="btn btn-info w-100">+</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.7.0/math.js"
+    integrity="sha512-jVMFsAksn8aljb9IJ+3OCAq38dJpquMBjgEuz7Q5Oqu5xenfin/jxdbKw4P5eKjUF4xiG/GPT5CvCX3Io54gyA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
