--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="row mt-1">
           <div class="col-3 p-1">
-            <button type="button" class="btn btn-warning w-100">x&#178</button>
+            <button type="button" class="btn btn-warning w-100">^</button>
           </div>
           <div class="col-3 p-1">
             <button type="button" class="btn btn-warning w-100">&#8730</button>
